# SheerIDVerifier

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sheerid_verifier/: __init__.py  __main__.py  cli.py  config.py  console.py
sheerid_verifier/data/: __init__.py  courses.py  grading.py  majors.py  transcript.py
sheerid_verifier/models/: __init__.py  proxy.py  student.py  university.py
sheerid_verifier/services/: __init__.py  class_schedule_html.py  document.py  html_renderer.py  http_client.py  stats.py  transcript_html.py  verifier.py
sheerid_verifier/utils/: __init__.py  fingerprint.py  headers.py  proxy.py
tests/: __init__.py  conftest.py
tests/unit/: test_console.py  test_document.py  test_fingerprint.py  test_headers.py
